Fix spacing in buttons

--- a/cv/src/container/App.css
+++ b/cv/src/container/App.css
@@ -38,14 +38,12 @@
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
-
 .buttonContainerStyle {
   position: absolute;
   top: 20px; 
   right: 20px;
   display: flex;
-  gap: 20px;
+  gap: 40px;
 };
 .nameContainerStyle {
   position: absolute;
